...
    func didSelect(menuItem: MenuViewController.MenuOptions)
}

final class MenuViewController: UIViewController {
    enum MenuOptions: String, CaseIterable {
        case home = "Home"
        case task1 = "Погода"
        case task2 = "Countries"
        case task3 = "Task №3"
        case task4 = "Geolocation"
        case task5 = "Cars List"
        case task6 = "Local Notifications"
    }
    
...
